[Samm-Bot] Fix footer on mobile.

--- a/Projects/SammBot/Stylesheets/Common/framework.css
+++ b/Projects/SammBot/Stylesheets/Common/framework.css
@@ -91,7 +91,7 @@ body {
 
     display: flex;
     flex: 0 1 auto;
-    justify-content: right;
+    justify-content: flex-start;
     align-items: center;
 }
 
